# tgmuxbot

./: .gitignore  README.md  config.example.json  flake.nix  multichatbot.service  pyproject.toml  run_bot.py
chat_bot/: database.py  error_handler.py  exceptions.py  main.py
chat_bot/tests/: test_database.py
